--- a/index.html
+++ b/index.html
@@ -2,8 +2,21 @@
 <html>
 	<head>
 		<title>Westyard</title>
+
+		<!-- The <style> element is where we put our CSS-code -->
+		<style>
+			
+		</style>
 	</head>
 	<body>
+		<nav>
+			<ul>
+				<li>Ordlista: html</li>
+				<li>Ordlista: css</li>
+				<li>Elevsidor</li>
+				<li>Uppgifter</li>
+			</ul>
+		</nav>
 		<h1>Hello world!</h1>
 	</body>
 </html>
