--- a/index.html
+++ b/index.html
@@ -5,18 +5,34 @@
 
 		<!-- The <style> element is where we put our CSS-code -->
 		<style>
-			
+
 		</style>
 	</head>
 	<body>
-		<nav>
-			<ul>
-				<li>Ordlista: html</li>
-				<li>Ordlista: css</li>
-				<li>Elevsidor</li>
-				<li>Uppgifter</li>
-			</ul>
-		</nav>
-		<h1>Hello world!</h1>
+
+		<div id="wrapper">
+			<header>
+				<h1>Header of the site: Westyard</h1>
+			</header>
+			
+			<nav>
+				<h2>Navigation</h2>
+				<ul>
+					<li>Ordlista: html</li>
+					<li>Ordlista: css</li>
+					<li>Elevsidor</li>
+					<li>Uppgifter</li>
+				</ul>
+			</nav>
+
+			<main>
+				<h2>Main content</h2>
+			</main>
+
+			<footer>
+				<h6>This is the footer</h6>
+			</footer>
+		</div>
+
 	</body>
 </html>
